src/styles.css
/* ... */
.logo span {
    font-size: 14px;
    color: #888;
}

.hidden {
    display: none;
}

.abc {
    background-color: #ffffff;
    width: 100%;
    height: 100vh;
}

@media (max-width: 1200px) {
    .container {
        margin-left: 250px;
    }

    .sidebar {
        width: 250px;
    }
}

@media (max-width: 992px) {
    .container {
        margin-left: 200px;
    }

    .sidebar {
        width: 200px;
    }
}

@media (max-width: 768px) {
    .container {
        margin-left: 0;
        margin-top: 20px;
    }

    .sidebar {
        position: relative;
        width: 100%;
        margin-left: 0;
        margin-top: 0;
    }

    .content {
        margin: 0;
        padding: 20px;
    }
}

@media (max-width: 576px) {
    body {
        box-sizing: border-box;
    }
    header{
        position: relative;
        padding: 8px;
        justify-content: left;
        display: grid;
        grid-template-columns: 200px 200px;
    }
    .header-buttons{
        display: flex;
        flex-direction: row-reverse;
    }
    .menu-btn{
        display: flex;
        right: 0px;
        color: #dbdbdc;
        background-color: #111111;
        border: none;
        font-size: 1.1em; 
        margin-left: 20px;
    }
    #menuModal{
        display: none;
        position: fixed;
        top: 0;
        left: 0;
        padding-top: 5vh;
        width: 100%;
        height: 100%;
        background-color: #f3f3f3;
        z-index: 1000;
    }
    #menuModal .menuModal {
        background: none;
        color: #111111;
        box-shadow: none;
        padding: 20px;
        border-radius: 10px;
        width: 100%;
        text-align: center;
    }
    #menuModal a{
        color: #111111;
        font-size: 1.7em;
        font-weight: 600;
        margin-bottom: 5px;
    }
    .modal-content .menu-btn{
        display: flex;
        position: absolute;
        right: 0px;
        color: #111111;
        background-color: #f3f3f3;
        border: none;
        font-size: 1.3em;
        margin-left: 20px;
        right: 0;
        top: 0;
    }
    .sidebar{
        display: none;
    }
    .header-subsection{
        display: none;
    }
    .logo{
        margin-left: 0;
        left: 0;
        transform: scale(0.6);
    }
    .container {
        margin-top: 15%;
        margin-bottom: 3%;
        margin-left: 3%;
        margin-right: 3%;
    }
    .container h4{
        font-size: 1.0em;
    }
    .content h2{
        font-size: 1.0em;
        display: none;
    }
    footer {
        background-color: #f3f3f3;
        bottom: 0;
        padding: 0;
        width: 100%;
        margin: 0;
        height: auto;
        display: flex;
        transition: bottom 0.5s ease;
    }
    .footer hr{
        border: 1px solid #dbdbdc;
        transform: scaleY(0.5);
        margin: 0px;
        margin-bottom: 3vh;
        width: 97%;
    }
    .footer-container{
        margin: 0;
        padding: 1vh;
        display: flex;
        flex-direction: column;
        text-align: center;
        box-sizing: border-box;
        align-items: center;
    }
    .footer-section{
        display: none;
    }
    .footer-subsection{
        text-align: center;
        flex: none;
        margin: 0;
    }
    .footer-subsection p, .footer-subsection a{
        color: #444445;
        text-align: center;
        justify-content: center;
        align-items: center;
        font-size: 0.8em;
        margin: 14px;
    }
    .footer-subsection a{
        font-size: 1em;
    }
    .select-container{
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 5vh;
        width: 100%;
    }
    .select-container hr{
        margin: 0;
    }
    .footer select{
        padding-top: 1vh;
        padding-bottom: 1vh;
        padding-left: 0;
        color: #444445;
        margin: 0px;
        background-color: transparent;
        width: 97%;
        height: auto;
    }
    .footer-select{
        padding-top: 1vh;
        padding-bottom: 1vh;
        padding-left: 0;
        color: #444445;
        margin: 0px;
        background-color: transparent;
        width: 97%;
        height: auto;
        justify-content: left;
    }
    .footer select:focus{
        outline: none;
    }
    .footer option {
        background: none;
        border: none;
        background-color: #f3f3f3;
        color: #444445;
        font-size: 0.8em;
        box-shadow: none;
    }
}

